# video_transcriber

./: .gitignore  README.md  pyproject.toml  transcript_gen_logic.py  video_transcriber.py
